--- a/Microcharts_XF/Microcharts_XF.iOS/Microcharts_XF.iOS.csproj
+++ b/Microcharts_XF/Microcharts_XF.iOS/Microcharts_XF.iOS.csproj
@@ -148,6 +148,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microcharts.Forms">
+      <Version>0.8.3-pre</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
@@ -156,5 +159,14 @@
       <Project>{3507AF1E-1A34-4D5C-8F80-4FA2C643B86E}</Project>
       <Name>Microcharts_XF</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\uyku.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\adimsayar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\kalori.png" />
   </ItemGroup>
 </Project>
